public/styles/styles.css
html {
  height: 100%;
}


body {
  min-height: 100%;
  font-family: 'Montserrat', sans-serif;
  background: white;
  background-image:
    radial-gradient(#1A535C 8%, transparent 0),
    radial-gradient(#1A535C 8%, transparent 0);
  background-size: 30px 30px;
  background-position: 0 0, 15px 15px;
}

#welcome {
  font: 'Open Sans', sans-serif;
  background-color: #1A535C;
  height: 250px;
  text-align: center;
  color: #FFE66D;
  padding-top: 5%;
  margin-bottom: 30px;
  border-bottom: 1px solid #08171A;
}

h4 {
  font-weight: lighter;
  color: #4ECDC4;
}

#loadText {
  margin-top: 20px;
  font-style: italic;
  color: #b0b8c4;
}

button {
  background-color: #b0b8c4;
  color: #1A535C;
  border-radius: 25px;
  border: 1px solid #08171A;
  font-size: 18px;
}

.btn:hover {
  background-color: #e6e8ed;
  color: #345995;
  margin: 20px 10px;
  border: 1px solid #08171A;
}

#todoListHeader {
  margin: 3px;
}

#listDropDown {
  width: 75%;
  margin: 8px 10px;
  height: 30px;
  border: 1px solid #08171A;
}

#listBlock {
  height: 50px;
  width: 300px;
  margin-bottom: 100px;
}

#toDoBlock {
  height: 500px;
}

#toDoBtn,
#ListBtn {
  float:right;
  width: 35px;
  height: 35px;
}

#toDoBtn{
  background-image: url("/images/plus-sign.png");
  background-size: 15px;
  background-repeat: no-repeat;
  background-position: center;
}

#ListBtn {
  font-size: 1px;
  margin-top: 5px;
  margin-right: 10px;
  background-image: url("/images/gear-icon.png");
  background-size: 25px;
  background-repeat: no-repeat;
  background-position: center;
}

/*.list is light colored to do box*/
.list {
  border: 1px solid #08171A;
  background-color: #F7FFF7;
  border-radius: 10px;
}

#todoHeader {
  text-align: center;
  margin: 20px;
  border: 1px solid #08171A;
  border-radius: 10px;
  padding: 5px 5px;
  background-color: #4ECDC4;
}

.listItem {
  list-style-type: none;
  padding: 10px;
  border: 1px solid #08171A;
  width: 200px;
  margin-bottom: 10px;
  margin-left: 20%;
  text-align: center;
  color: #1A535C;
  font-weight: bolder;
  background-color: #FFFAE4;
  border-radius: 10px;
}

#footer {
  bottom: 0;
  width: 100%;
  height: 100%;
  margin-top: 75px;
  margin-bottom: 0px;
  padding-top: 15px;
  background-color: #f5f5f5;
  text-align: center;
}

/*Modal formatting*/

/* The Modal (background) */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
}

/* Modal Content/Box */
.modal-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 50%;
}

/* The Close Button */
.close,
.closeList {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.closeList:hover,
.closeList:focus,
.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

/*list item formatting*/

a:link,
a:visited {
  color: #1A535C
}

a:hover {
  text-decoration: none;
}

.liToDo {
  font-size: 25px;
  text-decoration: none;
}

.liToDo:hover {
  font-size: 28px;
  font-weight: bold;
}

.crossOut {
  font-style: italic;
  color: #bbc1bd;
}

.hide {
  display: none;
}

.trash {
  float: right;
  margin-left: 85%;
}

